dice-roller CHK results CHK total-sum CHK

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main>
       <section class="applet">
+        <!-- <form id="diceRoller"> -->
         <label class="usr-input" id="dice">How many dice?</label
         ><input
           class="user-input"
@@ -29,6 +30,7 @@
           placeholder="# of sides"
         />
         <button id="roll-button" type="submit">Roll!</button>
+        <!-- </form> -->
         <label class="total" id="total-label">Total: </label
         ><span class="total" id="die-faces-sum">__</span>
       </section>
@@ -38,6 +40,6 @@
         <div id="results"></div>
       </section>
     </main>
-    <script src="./scripts/main.js"></script>
+    <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
