--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
           type="text"
           placeholder="# of sides"
         />
-        <button id="roll-button" type="submit">Roll!</button>
+        <button id="roll-button" type="submit" onclick="rollUpOffMe()">
+          Roll!
+        </button>
         <!-- </form> -->
         <label class="total" id="total-label">Total: </label
         ><span class="total" id="die-faces-sum">__</span>
       </section>
       <section class="results">
-        <button id="results-button">Show All Rolls</button
-        ><button id="reset-button">Reset Applet</button>
+        <button id="results-button" onclick="showResults()">
+          Show All Rolls</button
+        ><button id="reset-button" ondblclick="resetApplet()">
+          Reset Applet
+        </button>
         <div id="results"></div>
       </section>
     </main>
