nearly finished. Reset bugs insist

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           name="numdice"
           type="text"
           placeholder="# of dice"
+          autofocus
         />
         <label class="usr-input" id="sides">How many die sides?</label
         ><input
