--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Dice Simulator</h1>
       <h3>JS Applet</h3>
       <h4>Assessment for Week 10</h4>
+      <a href="https://austindeboer.dev/" id="home-page"
     </header>
     <main>
       <section class="applet">
