home page, oops

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Dice Simulator</h1>
       <h3>JS Applet</h3>
       <h4>Assessment for Week 10</h4>
-      <a href="https://austindeboer.dev/" id="home-page"
+      <a href="https://austindeboer.dev/">Home</a>
     </header>
     <main>
       <section class="applet">
